# sphinxcontrib-generate-include

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish-to-pypi.yaml
docs/: conf.py  estimation.py  index.md
sphinxcontrib/generate_include/: __init__.py  generate_include.py  mdlib.py
test/: conftest.py  test_basic_functionality.py  test_caching.py  test_edge_cases.py  test_error_handling.py  test_mdlib.py  test_setup.py
