[project]
name = "sphinxcontrib-generate-include"
version = "0.1.0"
description = "Generate included Sphinx markup through Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["myst-parser", "sphinx"]

[tool.setuptools.packages.find]
include = ["sphinxcontrib*"]

[dependency-groups]
dev = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "pytest>=9.0.1",
    "pytest-subtests>=0.15.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
