[project]
name = "sphinxcontrib-generate-include"
version = "0.1.1"
description = "Generate included Sphinx markup through Python"
authors = [{ name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["myst-parser", "sphinx"]

[project.urls]
Homepage = "https://github.com/jonasehrlich/sphinxcontrib-generate-include"
Repository = "https://github.com/jonasehrlich/sphinxcontrib-generate-include"
Documentation = "https://sphinxcontrib-generate-include.readthedocs.io/"


[dependency-groups]
dev = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "pyrefly>=0.43.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-subtests>=0.15.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.6",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-design>=0.6.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "PL",
    "RUF",
]


[tool.pyrefly]
project-excludes = ["**/.[!/.]*", "test/**"]
